--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,13 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_main"
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+        android:layout_height="0dp"></android.support.v7.widget.RecyclerView>
+    <Button
+        android:id="@+id/btn_to_mvp_activity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="btn_to_mvp_activity"/>
 
 </LinearLayout>
